--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ crate-type = ["cdylib",]
 [dependencies]
 wasm-bindgen = "0.2.8"
 console_error_panic_hook = "0.1.7"
+rand = "0.8.4"
+getrandom = { version = "0.2.3", features = ["js"] }
 
 [dependencies.web-sys]
 version = "0.3.58"
